--- a/SCMMaven/pom.xml
+++ b/SCMMaven/pom.xml
@@ -32,7 +32,7 @@
             <artifactId>exec-maven-plugin</artifactId>
             <version>3.1.0</version>
             <configuration>
-                <mainClass>com.demo.JavaMavenJenkins.App</mainClass>
+                <mainClass>com.jenkins.SCMMaven.App</mainClass>
             </configuration>
         </plugin>
 
